[gd_scene load_steps=4 format=3 uid="uid://cw2mvcntu38p2"]

[ext_resource type="Script" path="res://scenes/debug/overlay.gd" id="1_3d83f"]
[ext_resource type="PackedScene" uid="uid://djs5r2dgf3cj3" path="res://tools/unit_viewer.tscn" id="2_117x8"]
[ext_resource type="PackedScene" uid="uid://dphluso4iln0n" path="res://tools/scene_panel.tscn" id="3_maf6d"]

[node name="Overlay" type="CanvasLayer"]
process_mode = 3
layer = 50
script = ExtResource("1_3d83f")

[node name="QuitButton" type="Button" parent="."]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -76.0
offset_top = 13.0
offset_right = -12.0
offset_bottom = 77.0
grow_horizontal = 0
focus_mode = 0
text = "Quit"

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = 631.0
offset_top = 952.0
offset_right = 735.0
offset_bottom = 983.0
item_count = 2
selected = 0
popup/item_0/text = "Slot 0"
popup/item_0/id = 0
popup/item_1/text = "Newest"
popup/item_1/id = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -202.0
offset_top = -128.0
offset_right = 202.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 25

[node name="SaveButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
focus_mode = 0
text = "Save"

[node name="LoadButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
focus_mode = 0
text = "Load"

[node name="UnitViewer" parent="." instance=ExtResource("2_117x8")]

[node name="PrintOrphanNodesButton" type="Button" parent="."]
offset_left = 17.0
offset_top = 792.0
offset_right = 192.0
offset_bottom = 823.0
text = "Print orphan nodes"

[node name="ScenePanel" parent="." instance=ExtResource("3_maf6d")]

[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="PrintOrphanNodesButton" to="." method="_on_button_pressed"]

